--------------------------------------------------------------------------------
drkns 2025-02-25 20:39:35+00:00 - build 6443

1. Continue 6385.5.

--------------------------------------------------------------------------------
drkns 2025-02-19 19:47:29+00:00 - build 6442

1. Update thirdparty libraries.

2. Warnings.

--------------------------------------------------------------------------------
drkns 2025-02-15 23:02:07+00:00 - build 6441

1. Continue gh-909.

--------------------------------------------------------------------------------
drkns 2025-02-13 21:49:36+00:00 - build 6440

1. Continue gh-909.

2. Correction of 6428.1.

--------------------------------------------------------------------------------
drkns 2025-02-12 21:01:13+00:00 - build 6439

1. Make puristic compilers happy.

--------------------------------------------------------------------------------
drkns 2025-02-12 19:48:48+00:00 - build 6438

1. gh-909: Alpha-channel and FCF_INHERIT_STYLE should be applied to filepanel cursor.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-02-11 19:37:03+00:00 - build 6437

1. Rename FCF_FG_INVERSE to FCF_INVERSE.

2. Fix Shift+Enter in histories.

--------------------------------------------------------------------------------
drkns 2025-02-10 01:02:20+00:00 - build 6436

1. Correction of 6434.

--------------------------------------------------------------------------------
drkns 2025-02-09 23:33:54+00:00 - build 6435

1. Correction of 6434.

--------------------------------------------------------------------------------
drkns 2025-02-09 21:59:45+00:00 - build 6434

1. Refactoring.

--------------------------------------------------------------------------------
skipik 2025-02-06 20:08:12+03:00 - build 6433

1. SQLite v3.49.0.

--------------------------------------------------------------------------------
drkns 2025-02-05 23:04:04+00:00 - build 6432

1. Improve logging.

2. Refactoring.
