@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-02-26 20:59:10+00:00 - build 6444
+
+1. Experimental: custom color themes (%FARHOME%\Addons\Colors\Interface) can be selected directly from the UI (Options - Colors - Themes).
+
+--------------------------------------------------------------------------------
 drkns 2025-02-25 20:39:35+00:00 - build 6443
 
 1. Continue 6385.5.
